# zkp-light

./: CMakeLists.txt  README.md  commit.c  verify.c
